# focustime

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: release.yml  rust.yml  sonarcloud.yml  typos.yml
src/: app.rs  blocker.rs  config.rs  main.rs  notifications.rs  stats.rs  timer.rs  ui.rs  wakatime.rs
